--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.4"
+        "tightenco/ziggy": "^2.4",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/sanctum": "^3.3",  
+        "ext-pdo_pgsql": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
