--- a/vercel.json
+++ b/vercel.json
@@ -7,25 +7,23 @@
       }
     },
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-      }
+      { "src": "/(css|js|build|assets|images|fonts)/(.*)", "dest": "/public/$1/$2" },
+      { "src": "/(favicon\\.ico|robots\\.txt|site\\.webmanifest)", "dest": "/public/$1" },
+      { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "env": {
       "APP_ENV": "production",
-      "APP_DEBUG": "false",
-      "APP_URL": "https://aplicacioneswebbackend-git-dev-torosantiagos-projects.vercel.app/",
-
+      "APP_DEBUG": "true",
+      "APP_URL": "https://aplicacioneswebbackend-git-dev-torosantiagos-projects.vercel.app",
       "APP_CONFIG_CACHE": "/tmp/config.php",
       "APP_EVENTS_CACHE": "/tmp/events.php",
       "APP_PACKAGES_CACHE": "/tmp/packages.php",
       "APP_ROUTES_CACHE": "/tmp/routes.php",
       "APP_SERVICES_CACHE": "/tmp/services.php",
       "VIEW_COMPILED_PATH": "/tmp",
-      
       "CACHE_DRIVER": "array",
       "LOG_CHANNEL": "stderr",
       "SESSION_DRIVER": "cookie"
-    }
-  }
+    },
+    "buildCommand": "composer install && php artisan config:clear && php artisan route:clear && php artisan view:clear && php artisan cache:clear"
+}
