--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
-        "league/commonmark": "2.7"
+        "league/commonmark": "2.7",
+        "mercadopago/dx-php": "3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
